[package]
name = "street-fighter-ai-reloaded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "street_fighter_ai_reloaded"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.149"
libffi = "3.2.0"
libloading = "0.8.1"
numpy = "0.19.0"
pyo3 = { version = "0.19.0", features = ["extension-module"] }

[build-dependencies]
bindgen = "0.65.1"
